edited media query for reposnsiveness

--- a/src/Components/BodyComponents/AboutComponents/AboutMedia.css
+++ b/src/Components/BodyComponents/AboutComponents/AboutMedia.css
@@ -5,35 +5,37 @@
         padding: 4rem 0rem 1rem 0rem;
         width:100%;
         /* border: 1px solid red; */
+        border-bottom:1px solid rgb(37, 37, 80) ;
       }
 
       .about-inner {
-        height: 99vh;
-        width: 85vw;
+        height: auto;
+        width: 94vw;
         /* border: 1px solid red; */
         padding: 1rem 0rem;
-
         /* border: 1px solid #3b4053; */
         flex-wrap: wrap;
+        border: none;
    
       }
 
       .about-figuer {
-  
         height: 12rem;
         width: 14rem;
-  
       }
       .about-image {
         position: absolute;
         height: 12rem;
         width: 14rem;
+
       }
 
         /* ----- */
         .about-intro {
-            height:26rem;
-            width: 39rem;
+            height:auto;
+            width: 42rem;
+            /* border: 1px solid yellow; */
+            margin-top: 0.5rem;
     
             padding: 0.3rem 0.5rem;
            
@@ -59,8 +61,7 @@
           
           }
 
- 
-      
+
       
 }
 
@@ -73,21 +74,17 @@
       }
 
       .about-inner {
-        height: 99vh;
+        height: auto;
         width: 85vw;
         /* border: 1px solid red; */
         padding: 1rem 0rem;
-
         /* border: 1px solid #3b4053; */
         flex-wrap: wrap;
-   
       }
 
       .about-figuer {
-  
         height: 12rem;
-        width: 14rem;
-       
+        width: 14rem; 
       }
       .about-image {
         position: absolute;
@@ -137,7 +134,7 @@
       }
 
       .about-inner {
-        height: 99vh;
+        height: auto;
         width: 85vw;
         /* border: 1px solid red; */
         padding: 1rem 0rem;
@@ -201,7 +198,7 @@
       }
 
       .about-inner {
-        height: 99vh;
+        height: auto;
         width: 85vw;
         /* border: 1px solid red; */
         padding: 1rem 0rem;
@@ -265,7 +262,7 @@
       }
 
       .about-inner {
-        height: 99vh;
+        height: auto;
         width: 85vw;
         /* border: 1px solid red; */
         padding: 1rem 0rem;
@@ -329,7 +326,7 @@
       }
 
       .about-inner {
-        height: 99vh;
+        height: auto;
         width: 85vw;
         /* border: 1px solid red; */
         padding: 1rem 0rem;
@@ -393,7 +390,7 @@
       }
 
       .about-inner {
-        height: 99vh;
+        height: auto;
         width: 85vw;
         /* border: 1px solid red; */
         padding: 1rem 0rem;
@@ -457,7 +454,7 @@
   }
 
   .about-inner {
-    height: 86vh;
+    height: auto;
     width: 85vw;
     /* border: 1px solid red; */
     padding: 1rem 0rem;
@@ -483,6 +480,7 @@
     .about-intro {
         height:22rem;
         width: 30rem;
+        margin-top: 0.5rem;
         padding: 0.3rem 0.5rem;
         /* border: 1px solid rgb(8, 153, 153); */
         justify-content: space-around;
@@ -523,8 +521,9 @@
       }
 
       .about-inner {
-        height: 86vh;
-        width: 85vw;
+  
+        height: auto;
+        width: 90vw;
         /* border: 1px solid red; */
         padding: 1rem 0rem;
         flex-wrap: wrap;
@@ -544,6 +543,7 @@
         .about-intro {
             height:22rem;
             width: 30rem;
+            margin-top: 0.5rem;
             padding: 0.3rem 0.5rem;
             /* border: 1px solid rgb(8, 153, 153); */
             justify-content: space-around;
@@ -582,7 +582,7 @@
   }
 
   .about-inner {
-    height: 86vh;
+    height: auto;
     width: 85vw;
     /* border: 1px solid red; */
     padding: 1rem 0rem;
@@ -603,6 +603,7 @@
     .about-intro {
         height:22rem;
         width: 30rem;
+        margin-top: 0.5rem;
         padding: 0.3rem 0.5rem;
         /* border: 1px solid rgb(8, 153, 153); */
         justify-content: space-around;
@@ -639,17 +640,19 @@
   }
 
   .about-inner {
-    height: 86vh;
+    height: auto;
     width: 85vw;
     /* border: 1px solid red; */
     padding: 1rem 0rem;
     flex-wrap: wrap;
+    border:none ;
 
   }
 
   .about-figuer {
     height: 14rem;
     width: 16rem;
+    margin-top: 1rem;
   }
   .about-image {
     position: absolute;
@@ -664,6 +667,7 @@
         padding: 0.3rem 0.5rem;
         /* border: 1px solid rgb(8, 153, 153); */
         justify-content: space-around;
+        
        
       }
 
@@ -698,11 +702,12 @@
   }
 
   .about-inner {
-    height: 86vh;
+    height: auto;
     width: 80vw;
     /* border: 1px solid red; */
     padding: 1rem 0rem;
     flex-wrap: wrap;
+    border:1px solid rgb(37, 37, 80) ;
 
   }
 
@@ -758,11 +763,13 @@
   }
 
   .about-inner {
-    height: 86vh;
+    height: auto;
     width: 80vw;
     /* border: 1px solid red; */
     padding: 1rem 0rem;
     flex-wrap: wrap;
+    border:1px solid rgb(37, 37, 80) ;
+       
 
   }
 
@@ -778,7 +785,7 @@
 
     /* ----- */
     .about-intro {
-        height:22rem;
+        height:auto;
         width: 36rem;
         padding: 0.3rem 0.5rem;
         /* border: 1px solid rgb(8, 153, 153); */
@@ -815,10 +822,11 @@
     padding: 4rem 0rem 1rem 0rem;
     width:100%;
     /* border: 1px solid red; */
+    
   }
 
   .about-inner {
-    height: 55vh;
+    height:auto;
     width: 80vw;
     /* border: 1px solid red; */
     padding: 1rem 0rem;
@@ -827,6 +835,7 @@
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-around;
+    border:1px solid rgb(37, 37, 80) ;
 
   }
 
@@ -842,12 +851,13 @@
 
     /* ----- */
     .about-intro {
-        height:22rem;
-        width: 30rem;
-        padding: 0.3rem 0.5rem;
-      
+        height:auto;
+        width: 28rem;
+        padding:1rem 0.5rem;
         /* border: 1px solid rgb(8, 153, 153); */
         justify-content: space-around;
+        /* border:1px solid rgb(37, 37, 80) ; */
+
        
       }
 
@@ -880,10 +890,12 @@
     padding: 4rem 0rem 1rem 0rem;
     width:100%;
     /* border: 1px solid red; */
+    border: none;
+
   }
 
   .about-inner {
-    height: 55vh;
+    height: auto;
     width: 80vw;
     /* border: 1px solid red; */
     padding: 1rem 0rem;
@@ -945,10 +957,12 @@
     padding: 4rem 0rem 1rem 0rem;
     width:99vw;
     /* border: 1px solid red; */
+    border: none;
+
   }
 
   .about-inner {
-    height: 55vh;
+    height: auto;
     width: 60vw;
     /* border: 1px solid red; */
     padding: 1rem 0rem;
@@ -957,6 +971,7 @@
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-around;
+    border:1px solid rgb(37, 37, 80) ;
 
   }
 
@@ -1009,11 +1024,13 @@
     padding: 4rem 0rem 1rem 0rem;
     width:99vw;
     /* border: 1px solid red; */
+    border: none;
+
   }
 
   .about-inner {
-    height: 55vh;
-    width: 60vw;
+    height:auto;
+    width: 70vw;
     /* border: 1px solid red; */
     padding: 1rem 0rem;
     display: flex;
@@ -1073,11 +1090,12 @@
     padding: 4rem 0rem 1rem 0rem;
     width:99vw;
     /* border: 1px solid red; */
+    border: none;
   }
 
   .about-inner {
-    height: 55vh;
-    width: 60vw;
+    height: auto;
+    width: 70vw;
     /* border: 1px solid red; */
     padding: 1rem 0rem;
     display: flex;
@@ -1085,6 +1103,8 @@
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-around;
+    border:1px solid rgb(37, 37, 80) ;
+       
 
   }
 
