--- a/src/Components/BodyComponents/ProjectComponents/ProjectCounterMedia.css
+++ b/src/Components/BodyComponents/ProjectComponents/ProjectCounterMedia.css
@@ -4,7 +4,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -31,7 +31,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -59,7 +59,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -86,7 +86,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -113,7 +113,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -140,7 +140,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -167,7 +167,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -194,7 +194,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -221,7 +221,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -248,7 +248,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -278,7 +278,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
         
        }
        
@@ -306,7 +306,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
 
         
        }
@@ -336,7 +336,7 @@
         width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
-        border-bottom: 1px solid #3B4053;
+        border-bottom: 1px solid  rgb(37, 37, 80);
        }
        
        .project-inner-box{
@@ -373,7 +373,7 @@
            margin:4rem 0rem;
            /* border: none; */
            /* border: 1px solid red; */
-           border: 1px solid #3B4053;
+           border: 1px solid  rgb(37, 37, 80);
        }
        .pro-heading{
         /* border: 1px solid red; */
@@ -403,7 +403,7 @@
            padding: 1rem 0rem;
            /* border: none; */
            /* border: 1px solid red; */
-           border: 1px solid #3B4053;
+           border: 1px solid  rgb(37, 37, 80);
        }
        .pro-heading{
         /* border: 1px solid red; */
@@ -435,7 +435,7 @@
            padding: 1rem 0rem;
            /* border: none; */
            /* border: 1px solid red; */
-           border: 1px solid #3B4053;
+           border: 1px solid  rgb(37, 37, 80);
        }
        .pro-heading{
         /* border: 1px solid red; */
@@ -466,7 +466,7 @@
            padding: 1rem 0rem;
            /* border: none; */
            /* border: 1px solid red; */
-           border: 1px solid #3B4053;
+           border: 1px solid  rgb(37, 37, 80);
        }
        .pro-heading{
         /* border: 1px solid red; */
@@ -495,9 +495,9 @@
            width: 70vw;
            margin:5rem 0rem;
            padding: 1rem 0rem;
-           border: 1px solid #3B4053;
+           border: 1px solid  rgb(37, 37, 80);
            /* border: 1px solid red; */
-           /* border: 1px solid #3B4053; */
+           /* border: 1px solid  rgb(37, 37, 80); */
        }
        .pro-heading{
         /* border: 1px solid red; */
