--- a/src/Components/HeaderComponents/HomeComponent/HomeMedia.css
+++ b/src/Components/HeaderComponents/HomeComponent/HomeMedia.css
@@ -3,6 +3,7 @@
     height: 90vh;
     /* border: 1px solid red; */
     width: 100%;
+    border-bottom: 1px solid rgb(37, 37, 80);
   }
   .intro-box {
     background-color: transparent;
@@ -11,18 +12,20 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    /* border: 1px solid rgb(240, 94, 94); */
     box-shadow: none;
+    -webkit-backdrop-filter:none;
+backdrop-filter: none;
+    /* border: 1px solid rgb(240, 94, 94); */
   }
 
   .intro-note {
-    /* border: 1px solid rgb(49, 243, 0); */
     height: 12rem;
     width: 30rem;
     padding-left: 1rem;
     align-items: center;
     /* margin-bottom: 0; */
     justify-content: space-evenly;
+    /* border: 1px solid rgb(49, 243, 0); */
   }
 
   .name-text {
@@ -37,6 +40,7 @@
   .title-text-box {
     /* border: 1px solid rgb(138, 135, 135); */
     text-align: justify;
+    /* padding-right: 1rem; */
     /* margin-left: -10rem; */
   }
 
@@ -53,6 +57,7 @@
     background-color: #14192f;
     animation: textAnimation 3s infinite;
     animation-direction: alternate-reverse;
+    
   }
   @keyframes textAnimation {
     0% {
@@ -100,6 +105,7 @@
     height: 90vh;
     /* border: 1px solid red; */
     width: 100%;
+    border-bottom: 1px solid rgb(37, 37, 80);
   }
   .intro-box {
     background-color: transparent;
@@ -197,6 +203,7 @@
     height: 90vh;
     /* border: 1px solid red; */
     width: 100%;
+    border-bottom: 1px solid rgb(37, 37, 80);
   }
   .intro-box {
     background-color: transparent;
@@ -294,6 +301,7 @@
     height: 90vh;
     /* border: 1px solid red; */
     width: 100%;
+    border-bottom: 1px solid rgb(37, 37, 80);
   }
   .intro-box {
     background-color: transparent;
@@ -391,6 +399,9 @@
     height: 90vh;
     /* border: 1px solid red; */
     width: 100%;
+    border-bottom: 1px solid rgb(37, 37, 80);
+
+
   }
   .intro-box {
     background-color: transparent;
@@ -488,6 +499,8 @@
     height: 90vh;
     /* border: 1px solid red; */
     width: 100%;
+    border-bottom: 1px solid rgb(37, 37, 80);
+
   }
   .intro-box {
     background-color: transparent;
@@ -585,6 +598,8 @@
     height: 90vh;
     /* border: 1px solid red; */
     width: 100%;
+    border-bottom: 1px solid rgb(37, 37, 80);
+
   }
   .intro-box {
     background-color: transparent;
@@ -682,6 +697,8 @@
     height: 90vh;
     /* border: 1px solid red; */
     width: 100%;
+    border-bottom: 1px solid rgb(37, 37, 80);
+
   }
   .intro-box {
     background-color: transparent;
@@ -1075,10 +1092,10 @@
     background-color: transparent;
     padding: 0rem 0rem;
     height: 65vh;
-    width: 100%;
+    width: 80%;
     align-items: center;
     justify-content: center;
-    /* border: 1px solid rgb(240, 94, 94); */
+    border:1px solid rgb(37, 37, 80);;
     box-shadow: none;
   }
 
@@ -1267,12 +1284,13 @@
     /* border: 1px solid red; */
     width: 100%;
     /* padding: 0.5rem 0rem; */
+    border-bottom: none;
   }
   .intro-box {
     /* background-color: transparent; */
     padding: 2rem 1rem;
     height: 48vh;
-    width: 90vw;
+    width: 80vw;
     align-items: center;
     justify-content: space-between;
     /* border: 1px solid rgb(240, 94, 94); */
@@ -1464,7 +1482,7 @@
     width: 72vw;
     align-items: center;
     justify-content: space-around;
-    border: 1px solid rgb(240, 94, 94);
+    /* border: 1px solid rgb(240, 94, 94); */
   }
 
   .intro-note {
@@ -1558,7 +1576,7 @@
     width: 72vw;
     align-items: center;
     justify-content: space-around;
-    border: 1px solid rgb(240, 94, 94);
+    /* border: 1px solid rgb(240, 94, 94); */
   }
 
   .intro-note {
