--- a/src/Components/BodyComponents/AboutComponents/About.css
+++ b/src/Components/BodyComponents/AboutComponents/About.css
@@ -9,13 +9,14 @@
   flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
+  border-bottom:1px solid rgb(37, 37, 80) ;
 }
 
 .about-inner {
   height: 50vh;
   width: 63vw;
   margin: 3rem 0rem;
-  border: 1px solid #3b4053;
+  border: 1px solid rgb(37, 37, 80);
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
