--- a/src/Components/BodyComponents/ProjectComponents/ProjectCounter.css
+++ b/src/Components/BodyComponents/ProjectComponents/ProjectCounter.css
@@ -11,7 +11,7 @@
    }
    
    .project-inner-box{
-       border: 1px solid #3B4053;
+    border:1px solid rgb(37, 37, 80) ;
        height: auto;
        width: 63vw;
        margin:3rem 0rem;
