--- a/src/Components/FooterComponents/Footer.css
+++ b/src/Components/FooterComponents/Footer.css
@@ -11,7 +11,7 @@
     z-index: 1;
     /* -webkit-backdrop-filter: blur(12px); */
 /* backdrop-filter: blur(12px); */
-border-top: 1px solid #3B4053;
+border-top: 1px solid rgb(37, 37, 80);
 /* border: 1px solid red; */
 }
 .footer-text-box span {
