--- a/src/Components/BodyComponents/SkillComponents/SkillCounter.css
+++ b/src/Components/BodyComponents/SkillComponents/SkillCounter.css
@@ -11,6 +11,8 @@
     /* background-color: white; */
     background-color: #14192f;
     padding: 5rem 0rem;
+  border: none;
+
    
     }
     
@@ -21,7 +23,7 @@
       z-index: 1;
       height: auto;
     width: 63vw;
-    border: 1px solid #5a5a5a;
+    /* border: 1px solid #5a5a5a; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap-reverse;
@@ -29,9 +31,7 @@
     justify-content: center;
     background-color: transparent;
     padding: 1rem 0rem;
-    -webkit-backdrop-filter: blur(12px); 
-     backdrop-filter: blur(12px);
-    /* box-shadow: rgb(72, 72, 73) 0px 1px 2px 0px, rgb(44, 45, 63) 0px 2px 6px 2px; */
+
     }
     .skill-display{
       /* border: 1px solid white; */
@@ -49,8 +49,9 @@
     .skill-heading{
       color: #fdfdff;
       font-size: 2.2rem;
-      font-weight: 600;
+      font-weight: 500;
       padding: 0.5rem 0rem;
+      letter-spacing: 1px;
       text-align: center;
       text-transform: capitalize;
       /* border: 1px solid rgb(167, 155, 155); */
